--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <input type="password" id="password" name="password" required>
       </div>
       <button type="submit">Login</button>
+      <p> Don't have an account? <a href="register.html">Register</a></p>
     </form>
   </div>
   <script src="login.js"></script>
