--- a/register.html
+++ b/register.html
@@ -28,6 +28,7 @@
       </div>
       <button type="submit">Register</button>
     </form>
+  <p> Already have an account? <a href="index.html">Login</a></p>
   </div>
 
   <script src="register.js"></script>
